[gd_scene load_steps=33 format=3 uid="uid://b687vbeoimm0h"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_ssbc3"]
[ext_resource type="PackedScene" uid="uid://cycv7lfgdrhhy" path="res://scenes/player_bubble.tscn" id="2_2mrk3"]
[ext_resource type="Texture2D" uid="uid://sjc5hjtiecpb" path="res://assets/bubblegum/bubble_animation1.png" id="3_6vyim"]
[ext_resource type="Texture2D" uid="uid://rkro3d7d7qrn" path="res://assets/bubblegum/bubble_animation2.png" id="4_d3k0m"]
[ext_resource type="Texture2D" uid="uid://d02dm3ctvq478" path="res://assets/bubblegum/bubble_animation3.png" id="5_anjht"]
[ext_resource type="Texture2D" uid="uid://cm0lfr68538os" path="res://assets/bubblegum/bubble_animation4.png" id="6_nsgbl"]
[ext_resource type="Texture2D" uid="uid://cdq5rw6cf4x0j" path="res://assets/bubblegum/bubble_animation5.png" id="7_bgbsu"]
[ext_resource type="Texture2D" uid="uid://dqm0ewfj1s2q5" path="res://assets/bubblegum/bubble_animation6.png" id="8_w7o4s"]
[ext_resource type="Texture2D" uid="uid://dhl1mb6woxg5e" path="res://assets/bubblegum/bubble_animation7.png" id="9_afyhq"]
[ext_resource type="Texture2D" uid="uid://tsnbi5lumii3" path="res://assets/pop/bubble_animation_pop10.png" id="10_jomq7"]
[ext_resource type="Texture2D" uid="uid://c55mpvlmhbliq" path="res://assets/pop/bubble_animation_pop11.png" id="11_h4fhg"]
[ext_resource type="Texture2D" uid="uid://cdxjry1hlf6j8" path="res://assets/pop/bubble_animation_pop12.png" id="12_fsn5g"]
[ext_resource type="Texture2D" uid="uid://bu2564acj250r" path="res://assets/pop/bubble_animation_pop13.png" id="13_wars4"]
[ext_resource type="Texture2D" uid="uid://b8dromkcyrett" path="res://assets/bubblegum/bubble_animation8.png" id="14_5i3c2"]
[ext_resource type="Texture2D" uid="uid://dh02y2n6tjm4j" path="res://assets/bubblegum/bubble_animation9.png" id="15_vhq25"]
[ext_resource type="Texture2D" uid="uid://dt5h0cx0a4m21" path="res://assets/bubblegum/bubble_animation10.png" id="16_f8hfo"]
[ext_resource type="Texture2D" uid="uid://cip6m21eihp8l" path="res://assets/bubblegum/bubble_animation11.png" id="17_iyvoe"]
[ext_resource type="Texture2D" uid="uid://dofn7e2qdplob" path="res://assets/bubblegum/bubble_animation12.png" id="18_0agb8"]
[ext_resource type="Texture2D" uid="uid://y8ki4bc1f2qm" path="res://assets/bubblegum/bubble_animation13.png" id="19_k07h1"]
[ext_resource type="Texture2D" uid="uid://lgymju4rq45o" path="res://assets/bubblegum/bubble_animation14.png" id="20_iomk4"]
[ext_resource type="Texture2D" uid="uid://bfupuef320hyk" path="res://assets/bubblegum/bubble_animation15.png" id="21_pb1bu"]
[ext_resource type="Texture2D" uid="uid://2s1v0jrcpy1u" path="res://assets/pop/bubble_animation_pop1.png" id="22_bvi2s"]
[ext_resource type="Texture2D" uid="uid://bswrarg86hita" path="res://assets/pop/bubble_animation_pop2.png" id="23_dovwj"]
[ext_resource type="Texture2D" uid="uid://botfa1rk7wpo2" path="res://assets/pop/bubble_animation_pop3.png" id="24_8qql5"]
[ext_resource type="Texture2D" uid="uid://cisji2uklw205" path="res://assets/pop/bubble_animation_pop4.png" id="25_imecd"]
[ext_resource type="Texture2D" uid="uid://cuob0ogmxonss" path="res://assets/pop/bubble_animation_pop5.png" id="26_ya8js"]
[ext_resource type="Texture2D" uid="uid://c3doaiajktkce" path="res://assets/pop/bubble_animation_pop6.png" id="27_41ec2"]
[ext_resource type="Texture2D" uid="uid://vfuamyblchug" path="res://assets/pop/bubble_animation_pop7.png" id="28_j52a1"]
[ext_resource type="Texture2D" uid="uid://drcltbjekbku5" path="res://assets/pop/bubble_animation_pop8.png" id="29_s1nsd"]
[ext_resource type="Texture2D" uid="uid://bg4bax2wnf7lx" path="res://assets/pop/bubble_animation_pop9.png" id="30_or31n"]

[sub_resource type="SpriteFrames" id="SpriteFrames_qmwmx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_6vyim")
}, {
"duration": 1.0,
"texture": ExtResource("4_d3k0m")
}, {
"duration": 1.0,
"texture": ExtResource("5_anjht")
}, {
"duration": 1.0,
"texture": ExtResource("6_nsgbl")
}, {
"duration": 1.0,
"texture": ExtResource("7_bgbsu")
}, {
"duration": 1.0,
"texture": ExtResource("8_w7o4s")
}, {
"duration": 1.0,
"texture": ExtResource("9_afyhq")
}],
"loop": false,
"name": &"chew",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_jomq7")
}, {
"duration": 1.0,
"texture": ExtResource("11_h4fhg")
}, {
"duration": 1.0,
"texture": ExtResource("12_fsn5g")
}, {
"duration": 1.0,
"texture": ExtResource("13_wars4")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_5i3c2")
}, {
"duration": 1.0,
"texture": ExtResource("15_vhq25")
}, {
"duration": 1.0,
"texture": ExtResource("16_f8hfo")
}, {
"duration": 1.0,
"texture": ExtResource("17_iyvoe")
}, {
"duration": 1.0,
"texture": ExtResource("18_0agb8")
}, {
"duration": 1.0,
"texture": ExtResource("19_k07h1")
}, {
"duration": 1.0,
"texture": ExtResource("20_iomk4")
}, {
"duration": 1.0,
"texture": ExtResource("21_pb1bu")
}],
"loop": false,
"name": &"float",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_bvi2s")
}, {
"duration": 1.0,
"texture": ExtResource("23_dovwj")
}, {
"duration": 1.0,
"texture": ExtResource("24_8qql5")
}, {
"duration": 1.0,
"texture": ExtResource("25_imecd")
}, {
"duration": 1.0,
"texture": ExtResource("26_ya8js")
}, {
"duration": 1.0,
"texture": ExtResource("27_41ec2")
}, {
"duration": 1.0,
"texture": ExtResource("28_j52a1")
}, {
"duration": 1.0,
"texture": ExtResource("29_s1nsd")
}, {
"duration": 1.0,
"texture": ExtResource("30_or31n")
}],
"loop": false,
"name": &"pop",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wox2i"]
radius = 3.0
height = 16.0

[node name="Character" type="RigidBody2D"]
lock_rotation = true
script = ExtResource("1_ssbc3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -64)
sprite_frames = SubResource("SpriteFrames_qmwmx")
animation = &"chew"
autoplay = "chew"

[node name="Bubble" parent="." instance=ExtResource("2_2mrk3")]
visible = false
position = Vector2(0, -16)

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_wox2i")

[node name="Timer" type="Timer" parent="."]
wait_time = 180.0
one_shot = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
